# eagle

./: .replit  app.json  package-lock.json  package.json  pyproject.toml
attached_assets/: Pasted-Packager-files-Config-files-32m-33-minutes-ago-login-Chats-Archived-Python-to-Android-1758694373709_1758694373713.txt  Pasted-all-your-authtoken-https-dashboard-ngrok-com-get-started-your-authtoken-r-n-r-nERR-NGROK-4018-r-n-1758698907888_1758698907890.txt
batman/batman/: .replit  pyproject.toml
batman/batman/EAGLE/: .rep  .replit  README.md  cli_interface.py  database.py  main.py  pyproject.toml  requirements.txt  setup_sample_data.py  task_management.db  task_manager.py  telegram_test.py  web_app.py
batman/batman/EAGLE/mobile_app/: App.js  app.json  eas.json  package.json
batman/batman/EAGLE/static/: sw.js
batman/batman/EAGLE/templates/: base.html  dashboard.html  login.html
batman/batman/EAGLE/uploads/: .gitkeep  f9faf72a-3038-4313-a3f3-c3044246ee17.doc
