[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosmtplib>=4.0.2",
    #"aiosqllite"
    "bcrypt>=4.3.0",
    "cryptography>=45.0.7",
    "email-validator>=2.3.0",
    "fastapi>=0.116.1",
    "flask>=3.1.2",
    "flask-socketio>=5.3.6",
    "openai>=1.107.2",
    "passlib>=1.7.4",
    "plyer>=2.1.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    
    #addon
    #"pyautogui>=0.09.74","
    #"pynput>=1.7.6
    #"pyperclip>=1.8.2",
    #listner
    #input
    #networ config
    #ls 
    #if config 
    #ip config
    #netstat
    #keylogger
    #rat
    "pyjwt>=2.10.1",
    "pyqt5>=5.15.11",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "pyttsx3>=2.99",
    "requests>=2.32.5",
    "speechrecognition>=3.14.3",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.49.1",
    "streamlit-authenticator>=0.4.2",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
